// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Injects docgen result as __docgenInfo property 1`] = `
{
  "description": "",
  "displayName": "basic-sfc",
  "exportName": "default",
  "props": [
    {
      "defaultValue": {
        "func": false,
        "value": "'bar'",
      },
      "description": "Description of foo.",
      "name": "foo",
      "type": {
        "name": "string",
      },
    },
  ],
  "sourceFiles": undefined,
  "tags": {},
}
`;

exports[`Injects docgen result for default-exported non-SFC 1`] = `
{
  "description": "",
  "displayName": "basicDefault.vue",
  "exportName": "default",
  "props": [
    {
      "defaultValue": {
        "func": false,
        "value": "-1",
      },
      "description": "Foo the number.",
      "name": "foo",
      "type": {
        "name": "number",
      },
    },
  ],
  "sourceFiles": undefined,
  "tags": {},
}
`;

exports[`Injects docgen result for non-SFC 1`] = `
{
  "description": "",
  "displayName": "basic.vue",
  "exportName": "MyButton",
  "props": [
    {
      "defaultValue": {
        "func": false,
        "value": "-1",
      },
      "description": "Foo the number.",
      "name": "foo",
      "type": {
        "name": "number",
      },
    },
  ],
  "sourceFiles": undefined,
  "tags": {},
}
`;

exports[`Injects docgen result non-SFC with multiple exports 1`] = `
{
  "description": "",
  "displayName": "MyButton1",
  "exportName": "MyButton1",
  "props": [
    {
      "defaultValue": {
        "func": false,
        "value": "-1",
      },
      "description": "Foo the number.",
      "name": "foo",
      "type": {
        "name": "number",
      },
    },
  ],
  "sourceFiles": undefined,
  "tags": {},
}
`;

exports[`Injects docgen result non-SFC with multiple exports 2`] = `
{
  "description": "",
  "displayName": "MyButton2",
  "exportName": "MyButton2",
  "props": [
    {
      "defaultValue": {
        "func": false,
        "value": "-1",
      },
      "description": "Foo the number.",
      "name": "foo",
      "type": {
        "name": "number",
      },
    },
  ],
  "sourceFiles": undefined,
  "tags": {},
}
`;

exports[`Should ignore props/events with @ignore JSDoc tag 1`] = `
{
  "description": "",
  "displayName": "ignore",
  "events": [
    {
      "description": "Not ignored.",
      "name": "qux",
    },
  ],
  "exportName": "default",
  "props": [
    {
      "defaultValue": {
        "func": false,
        "value": "Infinity",
      },
      "description": "Not ignored.",
      "name": "bar",
      "type": {
        "name": "number",
      },
    },
  ],
  "slots": [],
  "sourceFiles": undefined,
  "tags": {},
}
`;
